Remove createMemoryQueryRunner helper
Using builder directly is simpler.