@@ -13,17 +13,16 @@
  */
 package io.trino.plugin.memory;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import io.trino.Session;
 import io.trino.sql.planner.OptimizerConfig;
 import io.trino.testing.AbstractTestQueryFramework;
 import io.trino.testing.QueryRunner;
 import org.junit.jupiter.api.Test;
 
+import java.util.List;
+
 import static com.google.common.base.Verify.verify;
 import static io.trino.SystemSessionProperties.STATISTICS_PRECALCULATION_FOR_PUSHDOWN_ENABLED;
-import static io.trino.plugin.memory.MemoryQueryRunner.createMemoryQueryRunner;
 import static io.trino.tpch.TpchTable.NATION;
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -34,9 +33,9 @@ public class TestMemoryTableStatistics
     protected QueryRunner createQueryRunner()
             throws Exception
     {
-        return createMemoryQueryRunner(
-                ImmutableMap.of(),
-                ImmutableList.of(NATION));
+        return MemoryQueryRunner.builder()
+                .setInitialTables(List.of(NATION))
+                .build();
     }
 
     @Test
